--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
                         Our Services
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="./itsolution.html">It Solution</a></li>
-                      <li><a class="dropdown-item" href="./websolution.html">Web Solution</a></li>
+                      <li><a class="dropdown-item" href="./html/itsolution.html">It Solution</a></li>
+                      <li><a class="dropdown-item" href="./html/websolution.html">Web Solution</a></li>
                     </ul>
                   </li>
-                  <a class="nav-link" href="./aboutus.html">About us</a>
-                  <a class="nav-link" href="./contactus.html">Contact us</a>
+                  <a class="nav-link" href="./html/aboutus.html">About us</a>
+                  <a class="nav-link" href="./html/contactus.html">Contact us</a>
                 </div>
                 <button type="button" class="rounded-pill btn-rounded ms-1">8286800482 
                     <span><i class="fas fa-phone-alt"></i></span>
