--- a/html/websolution.html
+++ b/html/websolution.html
@@ -16,7 +16,7 @@
 
     <nav class="navbar navbar-expand-lg menu hello navbar-dark shadow fixed-top">
         <div class="container">
-          <a class="navbar-brand" href="./index.html">Numlock Infotech</a>
+          <a class="navbar-brand" href="../index.html">Numlock Infotech</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
