--- a/index.html
+++ b/index.html
@@ -221,8 +221,8 @@
                         <h5 class="footer-titles">Services</h5>
                         <hr>
                         <ul>
-                            <li><a href="">It Solutions</a></li>
-                            <li><a href="">Web Solutions</a></li>
+                            <li><a href="./html/itsolution.html">It Solutions</a></li>
+                            <li><a href="./html/websolution.html">Web Solutions</a></li>
                         </ul>
                     </div>
 
